# ose-auditor

./: .env.example  .gitignore  LICENSE  OSE Auditor - Official Positioning & Product Strategy.docx  OSE_AUDITOR_SETUP_GUIDE1.md  OSE_Auditor_Setup_Testing_Guide.md  Ose-ContractsDoc.md  Ose-aduit-deepseek-remark.md  Ose-aduit-googleAI-remark.md  README.md  description.md  ose-meaning.md  ose-parserv1.md  payment_pages_3462017_1781863471793.csv  pyproject.toml  requirements.txt
.github/workflows/: audit-bot.yml
client/: mcp_server.py  orchestrator.py  ose.py  parser.py  web3_parser.py
client/cyber_rules/: quant_signatures.yaml  web2_signatures.yaml  web3_signatures.yaml
contracts/: contract_a.py  contract_b.py
fsa/: analyzer.py  graph_builder.py  signatures.py
npm/: ose.js
scripts/github_app/: audit_bot.py
server/: billing.py  database.py  main.py  prompts.py
tests/: requirements.txt
