[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ose-auditor"
version = "1.0.0"
description = "OSE Auditor: a financial-logic security scanner for Node.js/TypeScript projects."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Crestsek" }
]
keywords = ["security", "audit", "sast", "vulnerability-scanner", "nodejs", "typescript", "fintech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

# Keep this dependency list intentionally minimal -- the open-source client
# (parser.py, ose.py, contracts/) is stdlib-only by design (see parser.py's
# module docstring). httpx is optional/preferred for the server HTTP call,
# with a stdlib urllib fallback already implemented in orchestrator.py, so
# it is NOT a hard dependency here -- listed under [project.optional-dependencies]
# instead so a bare `pip install ose-auditor` stays dependency-light.
dependencies = [
"ose-auditor-fsa>=1.0.0",
]

[project.optional-dependencies]
# Faster / more robust HTTP client for talking to the OSE Server. Falls
# back to urllib automatically if not installed (see orchestrator.py
# _post_once / _HAS_HTTPX).
http = ["httpx>=0.27"]

# Real (non-mock) local analysis requires tree-sitter + language grammars.
# Split out so users who only want Contract A generation / server-side
# analysis aren't forced to build tree-sitter grammars.
analysis = [
    "tree-sitter>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-typescript>=0.21",
]

# MCP stdio server support (client/mcp_server.py uses only the stdlib --
# this extra exists for future MCP SDK adoption without breaking installs
# that don't need it).
mcp = []

dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://ose.crestsek.com"
Repository = "https://github.com/crestsek/ose-auditor"
Issues = "https://github.com/crestsek/ose-auditor/issues"

# Console entry points -- this is what makes `pip install ose-auditor`
# followed by `ose audit ./project` work without invoking python -m.
[project.scripts]
ose = "client.ose:main"
ose-mcp = "client.mcp_server:main"

# ---------------------------------------------------------------------------
# Package layout
# ---------------------------------------------------------------------------
# IMPORTANT: this package intentionally ships `client/`, `contracts/`, and
# `fsa/` ONLY.
#
#   - `client/` + `contracts/` are explicitly open-source (MIT) per their
#     own module docstrings and contain no proprietary logic.
#   - `fsa/` (analyzer.py, signatures.py, graph_builder.py) IS marked
#     "CLOSED SOURCE / PROPRIETARY -- never disclosed to the public" in
#     its own docstrings, but the current architecture requires it to run
#     locally for `ose audit` to produce real (non-mock) findings. Shipping
#     it as plaintext .py here is a direct contradiction of that docstring
#     that you (the maintainer) need to resolve deliberately -- e.g. by
#     relying on a proprietary LICENSE/EULA rather than secrecy, or by
#     Cython-compiling these three modules into binary extensions before
#     building wheels. This pyproject.toml does NOT make that decision for
#     you; it ships the .py files as-is so the package functions, but you
#     should not announce this publicly until you've picked an approach.
#   - `server/` (main.py, database.py, billing.py, prompts.py) is
#     deliberately EXCLUDED. It is the Render-deployed FastAPI backend and
#     has no role in the local CLI; shipping it here would leak billing
#     and prompt internals to every end user for zero functional benefit.

[tool.setuptools.packages.find]
include = ["client*", "contracts*", "fsa*"]
exclude = ["server*", "tests*", "scripts*"]

[tool.setuptools.package-data]
"*" = ["*.md"]
