[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ose-auditor"
version = "1.1.2"
description = "OSE Auditor: a financial-logic security scanner for Node.js/TypeScript projects."
readme = "description.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Crestsek" }
]
keywords = ["security", "audit", "sast", "vulnerability-scanner", "nodejs", "typescript", "fintech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

# Keep this dependency list intentionally minimal -- the open-source client
# (parser.py, ose.py, contracts/) is stdlib-only by design (see parser.py's
# module docstring). httpx is optional/preferred for the server HTTP call,
# with a stdlib urllib fallback already implemented in orchestrator.py, so
# it is NOT a hard dependency here -- listed under [project.optional-dependencies]
# instead so a bare `pip install ose-auditor` stays dependency-light.
dependencies = [
"ose-auditor-fsa>=1.0.1",
]

[project.optional-dependencies]
# Faster / more robust HTTP client for talking to the OSE Server. Falls
# back to urllib automatically if not installed (see orchestrator.py
# _post_once / _HAS_HTTPX).
http = ["httpx>=0.27"]

# Real (non-mock) local analysis requires tree-sitter + language grammars.
# Split out so users who only want Contract A generation / server-side
# analysis aren't forced to build tree-sitter grammars.
analysis = [
    "tree-sitter>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-typescript>=0.21",
]

# MCP stdio server support (client/mcp_server.py uses only the stdlib --
# this extra exists for future MCP SDK adoption without breaking installs
# that don't need it).
mcp = []

dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://ose.crestsek.com"
Repository = "https://github.com/crestseklogistics/ose-auditor"
Issues = "https://github.com/crestseklogistics/ose-auditor/issues"

# Console entry points -- this is what makes `pip install ose-auditor`
# followed by `ose audit ./project` work without invoking python -m.
[project.scripts]
ose = "client.ose:main"
ose-mcp = "client.mcp_server:main"

[tool.setuptools.packages.find]
include = ["client*", "contracts*"]
exclude = ["server*", "tests*", "scripts*"]

[tool.setuptools.package-data]
"*" = ["*.md"]
